# uACPI

./: .gitignore  LICENSE  README.md  meson.build  uacpi.cmake
.github/workflows/: main.yml
include/uacpi/: acpi.h  context.h  event.h  kernel_api.h  namespace.h  resources.h  sleep.h  status.h  tables.h  types.h  uacpi.h  utilities.h
include/uacpi/internal/: attributes.h  context.h  dynamic_array.h  event.h  field_io.h  helpers.h  interpreter.h  io.h  log.h  mutex.h  namespace.h  notify.h  opcodes.h  opregion.h  osi.h  resources.h  shareable.h  stdlib.h  tables.h  types.h  utilities.h
include/uacpi/platform/: arch_helpers.h  atomic.h  compiler.h  libc.h  stdlib.h  types.h
source/: default_handlers.c  event.c  field_io.c  files.cmake  interpreter.c  io.c  mutex.c  namespace.c  notify.c  opcodes.c  opregion.c  osi.c  registers.c  resources.c  shareable.c  sleep.c  stdlib.c  tables.c  types.c  uacpi.c  utilities.c
tests/: run_tests.py
tests/generated_test_cases/: buffer_field.py
tests/runner/: CMakeLists.txt  argparser.h  helpers.cpp  helpers.h  interface_impl.cpp  resource_tests.cpp  test_runner.cpp
tests/test-cases/: complex-package.asl  concat-res.asl  copy-a-method.asl  copy-object-opregion.asl  copy-object-self.asl  copy-object-to-predefined.asl  duplicate-named.asl  empty-objects.asl  eval-supports-plain-objects.asl  event.asl  global-lock.asl  hanging-while.asl  increment-fields.asl  indices-0.asl  indices-1.asl  indices-2.asl  infinite-recursion.asl  local0.asl  local0_string.asl  method-calls.asl  multilevel_ref.asl  mutex-1.asl  mutex-2.asl  mutex-3.asl  notifications-and-requests.asl  object-api-works.asl  osi.asl  read-from-deleted-field.asl  ref_modify_indirect.asl  ref_modify_via_method_call.asl  references-0.asl  references-1.asl  references-10.asl  references-3.asl  references-4.asl  references-5.asl  references-6.asl  references-7.asl  references-8.asl  references-9.asl  (+24 more)
tests/utilities/: asl.py
